delete unused code.

--- a/css/Cute.css
+++ b/css/Cute.css
@@ -1,11 +1,11 @@
 body {
     background: #94c126;
 }
-.box {
+/* .box {
     width: 300px;
     height: 400px;
     margin: 100px auto;
-}
+} */
 .cute_Box {
     width: 6px;
     height: 400px; 
